# defacer

./: Dockerfile  LICENSE.md  defacer_apptainer.recipe  pyproject.toml  readme.md
src/defacer/: defacing_nii_wf.py  defacing_wf.py  interfaces.py  mask_creation.py  predict.py
