[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "defacer"
version = "0.1"
authors = [{ name = "Victor NOZAIS", email = "vnozais@fealinx.com" }]
description = "Package for defacing brain MRI images in DICOM format, outputing Nifti images."
readme = "readme.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License v3 (GPLv3)" }
dependencies = [
    "nibabel>=4.0.2",
    "nipype>=1.7.0",
    "numpy>=1.21.5, <2.0.0",
    "quickshear",
    "click",
    "scikit-image",
]

[project.optional-dependencies]
TF = ["tensorflow==2.13.*"]

[project.scripts]
deface = "defacer.defacing_wf:main"
defacer_predict = "defacer.predict:main"
